kubernetes/dev/celery-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: celery-monitor
  name: celery-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celery-monitor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/donggiang-store-default: "true"
        io.kompose.service: celery-monitor
    spec:
      containers:
        - command:
            - celery
          args:
            - --broker=redis://redis:6379/0
            - flower
            - --port=5555
            - --purge_offline_workers=3600
          image: mher/flower:master
          name: celery-monitor
          ports:
            - containerPort: 5555
          resources: {}
      restartPolicy: Always
status: {}
