kubernetes/dev/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/donggiang-store-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env-configmap-v1
          image: donggiangthai/donggiang_store_local-web:$TAG
          name: web
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /home/app/.aws
              name: aws-credentials
              readOnly: true
          readinessProbe:
            periodSeconds: 15
            timeoutSeconds: 2
            successThreshold: 2
            failureThreshold: 2
            httpGet:
              path: /health
              port: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            periodSeconds: 15
            timeoutSeconds: 2
            successThreshold: 2
            failureThreshold: 2
            httpGet:
              path: /health
              port: 8000
          resources: {}
      restartPolicy: Always
      volumes:
        - name: aws-credentials
          hostPath:
            path: /home/minikube/.aws
            type: Directory
status: {}
