kubernetes/dev/donggiang-store-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: donggiang-store-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/donggiang-store-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/donggiang-store-default: "true"
